# CALM

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.scip-toolbox  README.md  SECURITY.md  compose.yaml  server.json  thresholds.toml
.calm-bin/x86_64-unknown-linux-musl/: calm
.ci-bin/x86_64-unknown-linux-musl/: ci
.claude/: settings.json
.claude/hooks/: calm-nudge.sh  ci-nudge.sh  session-start-agents-md.sh  session-start-build-calm.sh  (+2 more)
.cursor/: install.sh  mcp.json
benchmarks/: README.md  requirements.txt
codeindex/: schemas.py
crates/ci-core/: Cargo.toml
crates/ci-core/src/: config.rs  edit.rs  embedding.rs  fitness.rs  lib.rs  search.rs  types.rs  walk.rs
crates/ci-core/src/analysis/: dead_code.rs  diff_impact.rs
crates/ci-core/src/db/: schema.rs
crates/ci-core/src/indexer/: chunker.rs  crate_map.rs  edges.rs  imports.rs  lang_constants.rs  mod.rs  parser.rs  pipeline.rs
crates/ci-core/src/resolver/: formal.rs
crates/ci-core/src/scip/: ingest.rs  mod.rs  runner.rs
crates/ci-core/tests/: parity_test.rs  rust_indexing.rs
crates/ci-core/tests/fixtures/rust_workspace/core/src/: engine.rs  lib.rs
crates/ci-core/tests/fixtures/synthetic_project/: lcov.info
docs/: architecture.md  cloud-environment-setup.md  comparison.md  mcp-client-setup.md  migration-plan-v2.md  pattern-debt-registry.yaml  rename-checklist.md  what-external-users-get.md
npm/: README.md  stage-release.sh
scripts/: calm-mcp-wrapper.sh  gen-coverage.sh  install.sh  mcp-launcher.sh
types/: mcp_types.ts
(+204 files in other folders)
